2008-11-26  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/rtpmanager/gstrtpbin.c: (gst_rtp_bin_reset_sync),
	(gst_rtp_bin_clear_pt_map):
	Reset the sync parameters when clearing the payload type map too.
	Fixes #562312.

2008-11-26  Wim Taymans  <wim.taymans@collabora.co.uk>

	* gst/rtpmanager/gstrtpbin.c: (get_client),
	(gst_rtp_bin_reset_sync), (gst_rtp_bin_associate),
	(gst_rtp_bin_handle_sync), (create_stream),
	(gst_rtp_bin_class_init), (new_ssrc_pad_found):
	* gst/rtpmanager/gstrtpbin.h:
	Remove a lot of per stream state that is not needed and pass new info in
	the method call.
	Add signal to reset sync parameters.
	Avoid parsing the caps to get a clock_base, we get this from the sync
	signal now. 

2008-11-26  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/mxf/mxfdemux.c: (gst_mxf_pad_init),
	(gst_mxf_demux_reset_metadata), (gst_mxf_demux_combine_flows),
	(gst_mxf_demux_handle_generic_container_essence_element):
	Properly combine flow returns of the source pads.

	Improve debugging and reset pad fields together with the
	metadata to prevent invalid memory references.

	* gst/mxf/mxfparse.c: (mxf_metadata_preface_parse):
	Fix typo.

2008-11-26  Sebastian Dröge  <sebastian.droege@collabora.co.uk>

	* gst/mxf/mxfaes-bwf.c:
	(mxf_metadata_wave_audio_essence_descriptor_reset):
	* gst/mxf/mxfmpeg.c: (mxf_metadata_mpeg_video_descriptor_reset):
	* gst/mxf/mxfparse.c: (mxf_metadata_file_descriptor_handle_tag),
	(mxf_metadata_file_descriptor_reset),
	(mxf_metadata_generic_sound_essence_descriptor_reset),
	(mxf_metadata_generic_picture_essence_descriptor_reset),
	(mxf_metadata_cdci_picture_essence_descriptor_reset),
	(mxf_metadata_rgba_picture_essence_descriptor_reset),
	(mxf_metadata_multiple_descriptor_reset):
	* gst/mxf/mxfparse.h:
	When memset'ing the descriptors to zeroes only touch the part
	of this descriptor, not it's parent type.

	Set correct default values for all metadata fields.

2008-11-25  David Schleef  <ds@schleef.org>
